--- a/config.toml
+++ b/config.toml
@@ -25,3 +25,7 @@ theme = "pixyll"
   search_engine = false
   google_analytics_id = "XX-XXXXXXXX-X"
   paginate = 5
+
+[taxonomies]
+  tag = "tags"
+  category = "categories"
